# Image-Processor

./: CMakeLists.txt  color.cpp  color.h  filter_construction.h  filters.cpp  filters.h  image.cpp  image.h  image_processor.cpp  parser.cpp  parser.h
file_manager/: file_manager.cpp  file_manager.h
filters/: crop.cpp  crop.h  edge.cpp  edge.h  filter_protocol.h  gauss.cpp  gauss.h  grayscale.cpp  grayscale.h  negative.cpp  negative.h  sharp.cpp  sharp.h
